# streamlit_msal

./: .gitignore  README.md  app.py  auth.py  pyproject.toml
pages/auth/: __init__.py
pages/im_slow/: __init__.py
pages/page/: __init__.py
streamlit_msal/: __init__.py
streamlit_msal/web/: package-lock.json  package.json
streamlit_msal/web/src/: Msal.tsx  index.tsx
