[project]
name = "streamlit-msal"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Wilian", email = "wilianzilv@gmail.com" }
]
dependencies = [
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "streamlit>=1.28.2",
]

[tool.hatch.metadata]
allow-direct-references = true
